# ScheduledGitCommit

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
.github/workflows/: cmake-multi-platform.yml
includes/: git_manager.h  options_manager.hpp
src/: git_manager.cpp
